Tidy folder structure and convert script to a module

--- a/index.html
+++ b/index.html
@@ -1,47 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>Countdown</title>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="data:image/x-icon;," type="image/x-icon">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r82/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
-    <script src="countdown.js"></script>
+  <title>Countdown</title>
 
-    <style>
+  <link rel="icon" href="data:image/x-icon;," type="image/x-icon">
+  <link rel="stylesheet" href="./css/index.css"></link>
 
-      * {
-        margin:0;
-        padding:0;
-      }
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r82/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
+  <script src="js/index.js" type="module"></script>
 
-      html, body {
-        height: 100%;
-        width: 100%;
-        background-color: black;
-        overflow: hidden;
-      }
+</head>
 
-      body {
-        display: flex;
-        justify-items: center;
-        align-items: center;
-        cursor: grab;
-      }
-
-    </style>
-
-    <script>
-      window.onload = () => window.c = new Countdown(document.querySelector('body'));
-    </script>
-
-  </head>
-
-  <body>
-  </body>
+<body>
+</body>
 
 </html>
