Import THREE and TWEEN as modules

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <title>Countdown</title>
 
   <link rel="icon" href="data:image/x-icon;," type="image/x-icon">
-  <link rel="stylesheet" href="./css/index.css"></link>
+  <link rel="stylesheet" href="css/index.css"></link>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r82/three.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
   <script src="js/index.js" type="module"></script>
 
 </head>
